# xknx

./: .codecov.yml  .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  MANIFEST.in  Makefile  README.md  build.sh  changelog.md  dpt-parse.py  example_async_udp_server.py  example_daemon.py  example_devices.py  example_disconnect.py  example_gatewayscanner.py  example_light.py  example_light_dimm.py  example_light_state.py  example_outlet.py  example_raw_knxip.py  example_read_mem_device.py  example_setpoint.py  example_stellantrieb.py  example_thermostat.py  example_time.py  example_tunnel.py  example_value_reader.py  main.py  playground.py  playground_callback.py  playground_no_call_back.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  (+3 more)
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pre-commit-update.yml  pythonpublish.yml  stale.yml  workflow_updater.yml
docs/: Gemfile  Makefile  README.md  _config.yml  binary_sensor.md  changelog.md  climate.md  config_converter.md  configuration.md  cover.md  devices.md  fan.md  home_assistant.md  index.md  introduction.md  light.md  migration_ha_0115.md  migration_ha_0116.md  numeric_value.md  raw_value.md  sensor.md  splitting_up.md  switch.md  time.md  usb.md  usb_knx_specification.md  weather.md  xknx.md
docs/_layouts/: default.html
docs/config-converter/: index.html
documentation/: documentation.md
examples/: example_callback.py  example_climate.py  example_config.py  example_connection.py  example_cover.py  example_daemon.py  example_datetime.py  example_devices.py  example_disconnect.py  example_fan_percent_mode.py  example_fan_step_mode.py  example_gatewayscanner.py  example_individual_address_write.py  example_info.py  example_light_dimm.py  example_light_rgbw.py  example_light_state.py  example_light_switch.py  example_manual_connection.py  example_outlet.py  example_powermeter_mqtt.py  example_read_serial_number.py  example_restart.py  example_scene.py  example_secure.py  example_send_telegrams.py  example_sensor.py  example_switch.py  example_switch_current_sensing.py  example_telegram_monitor.py  example_telegram_monitor_unix.py  example_time.py  example_tunnel.py  example_value_reader.py  example_weather.py  example_wip_jung_hackz.py  example_write_individual_address.py  example_write_serial_number.py  ip_secure_calculations.py  readme.md
examples/usb/: example_light.py  example_switch.py  example_telegram_monitor.py  knx_hid_datatypes.py  knx_hid_frame.py  main.py  usb_util.py
home-assistant-plugin/: .config.template  .isort.cfg  .pylintrc  HOWTO  Makefile  README.md  helper.sh  merge_from_upstream.sh  merge_to_upstream.pl  merge_to_upstream.sh  sync_upstream.pl
home-assistant-plugin/custom_components/: xknx.py
home-assistant-plugin/home-assistant.io/: sensor_table_generator.py
knx/: __init__.py  address.py  binaryinput.py  multicast.py  nameresolver.py  telegram.py
prog/: device.py  management.py
requirements/: development.txt  production.txt  testing.txt
script/: knx_usb_dissector.lua  run-in-env.sh  sensor_table_generator.py
test/: .pylintrc  Makefile  __init__.py  action_test.py  address_filter_test.py  address_test.py  binary_sensor_test.py  binaryinput_test.py  climate_test.py  config_test.py  conftest.py  cover_test.py  datetime_test.py  device_test.py  devices_test.py  dimmer_test.py  dpt_2byte_test.py  dpt_4byte_test.py  dpt_date_test.py  dpt_datetime_test.py  dpt_float_test.py  dpt_hvac_mode_test.py  dpt_integer_test.py  dpt_relative_value_test.py  dpt_scaling_test.py  dpt_scene_number_test.py  dpt_string_test.py  dpt_test.py  dpt_time_test.py  dpt_value_1_ucount_test.py  expose_sensor_test.py  fan_test.py  io_connect_test.py  io_connectionstate_test.py  io_disconnect_test.py  io_gateway_scanner_test.py  io_request_response_test.py  io_tunnelling_test.py  knx_groups_test.py  knxip_body_test.py  (+46 more)
test/cemi_tests/: __init__.py  cemi_frame_test.py  cemi_handler_test.py  cemi_handler_tests.py
test/config_tests/: config_v1_test.py  schema_test.py  yaml_loader_test.py
test/core_tests/: __init__.py  config_test.py  connection_manager_test.py  exceptions_test.py  group_address_dpt_test.py  payload_reader_test.py  state_updater_test.py  task_registry_test.py  telegram_queue_test.py  telegram_received_cb_test.py  value_reader_test.py
test/devices_tests/: __init__.py  action_test.py  binary_sensor_test.py  climate_test.py  cover_test.py  datetime_test.py  device_class_test.py  device_class_test.yaml  device_test.py  devices_test.py  expose_sensor_test.py  fan_test.py  light_test.py  notification_test.py  numeric_value_test.py  raw_value_test.py  remote_value_1count_test.py  remote_value_color_rgb_test.py  remote_value_color_rgbw_test.py  remote_value_dpt_2_byte_unsigned_test.py  remote_value_dpt_value_1_ucount_test.py  remote_value_scaling_test.py  remote_value_scene_number_test.py  remote_value_sensor_test.py  remote_value_step_test.py  remote_value_switch_test.py  remote_value_test.py  remote_value_updown_test.py  rgblight_test.py  scene_test.py  sensor_expose_loop_test.py  sensor_test.py  switch_test.py  travelcalculator_test.py  weather_test.py
test/dpt_tests/: __init__.py  dpt_10_time_test.py  dpt_11_date_test.py  dpt_12_test.py  dpt_14_float_test.py  dpt_16_string_test.py  dpt_17_scene_number_test.py  dpt_18_scene_control_test.py  dpt_19_datetime_test.py  dpt_1_test.py  dpt_1byte_control_test.py  (+32 more)
xknx/: __init__.py  __version__.py  _test.py  action.py  address.py  binary_sensor.py  binaryinput.py  binaryoutput.py  climate.py  colors.py  config.py  conversion.py  cover.py  device.py  devices.py  dimmer.py  dpt.py  dpt_float.py  dpt_scaling.py  dpt_time.py  exception.py  globals.py  knxip.py  knxip_enum.py  light.py  monitor.py  multicast.py  nameresolver.py  outlet.py  sensor.py  shutter.py  stateupdater.py  switch.py  switchtime.py  telegram.py  telegram_processor.py  telegram_queue.py  thermostat.py  time.py  travelcalculator.py  (+2 more)
(+596 files in other folders)
