[metadata]
description-file = README.md

[tool:pytest]
testpaths = test
norecursedirs = .git

[flake8]
exclude = .venv,.git,.tox,bin,lib,deps,build
# black requires this
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
force_sort_within_sections = true
forced_separate = test
combine_as_imports = true