[metadata]
description-file = README.md

[tool:pytest]
testpaths = test
norecursedirs = .git

[flake8]
exclude = .venv,.git,.tox,bin,lib,deps,build
# black requires this
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504

[isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = black
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_third_party = xknx
known_first_party = homeassistant,test
forced_separate = test
combine_as_imports = true

[mypy]
python_version = 3.8
ignore_errors = true
follow_imports = silent
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

# add the modules below once we add typing for them so that we fail the build in the future if someone changes something without updating the typings
# fully typechecked modules
[mypy-xknx.xknx,xknx.core.*,xknx.exceptions.*,xknx.io.*,xknx.knxip.*,xknx.telegram.*,]
strict = true
ignore_errors = false
warn_unreachable = true
# TODO: turn these off, address issues
implicit_reexport = true

# partly typechecked modules (extra block for better overview)
[mypy-xknx.devices.scene,xknx.devices.notification,xknx.devices.light,xknx.devices.action,xknx.devices.binary_sensor,xknx.devices.climate,xknx.devices.climate_mode,xknx.devices.cover,xknx.devices.datetime,xknx.devices.device,xknx.devices.devices,xknx.devices.expose_sensor,xknx.devices.fan,xknx.devices.travelcalculator,xknx.remote_value.remote_value,xknx.remote_value.remote_value_climate_mode]
strict = true
ignore_errors = false
warn_unreachable = true
# TODO: turn these off, address issues
implicit_reexport = true
