[metadata]
description-file = README.md

[flake8]
exclude = .venv,.git,.tox,bin,lib,deps,build
# black requires this
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504

[mypy]
python_version = 3.9
strict = true
warn_unreachable = true
implicit_reexport = true
ignore_missing_imports = true